--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
+    "@tosspayments/payment-widget-sdk": "^0.12.0",
+    "@tosspayments/tosspayments-sdk": "^2.3.7",
     "@types/jest": "^27.0.1",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^16.7.13",
@@ -29,7 +31,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^7.6.3",
+    "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
