--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "yup": "^1.6.1"
   },
   "scripts": {
-    "start": "cross-env PORT=3001 react-scripts start",
+    "start": "cross-env PORT=4001 react-scripts start",
+    "build:prod": "CI=false react-scripts build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
