--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
+    "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1",
     "sockjs-client": "^1.6.1",
     "typescript": "^4.4.2",
